--- a/src/mqttclient/App.config
+++ b/src/mqttclient/App.config
@@ -1,47 +1,47 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="mqttclient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="mqttclient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.WindowsRuntime" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.10.0" newVersion="4.0.10.0" />
+        <assemblyIdentity name="System.Runtime.WindowsRuntime" publicKeyToken="b77a5c561934e089" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.10.0" newVersion="4.0.10.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="ZedGraph" publicKeyToken="02a83cbd123fcd60" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.1.7.430" newVersion="5.1.7.430" />
+        <assemblyIdentity name="ZedGraph" publicKeyToken="02a83cbd123fcd60" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.1.7.430" newVersion="5.1.7.430"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
     <mqttclient.Properties.Settings>
       <setting name="mqttserver" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="mqttusername" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="mqttpassword" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="mqtttopic" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="mqtttimerinterval" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="ScreenShotEnable" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="ScreenShotInterval" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="BatterySensor" serializeAs="String">
         <value>False</value>
@@ -56,13 +56,13 @@
         <value>False</value>
       </setting>
       <setting name="TTSSpeaker" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="MqttSlideshow" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="MqttSlideshowFolder" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="RunAtStart" serializeAs="String">
         <value>False</value>
@@ -83,7 +83,7 @@
         <value>False</value>
       </setting>
       <setting name="WebCamToPublish" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="EnableTTS" serializeAs="String">
         <value>False</value>
