--- a/src/Win10SensorLibrary/Win2Mqtt.Sensors.csproj
+++ b/src/Win10SensorLibrary/Win2Mqtt.Sensors.csproj
@@ -1,24 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System.Speech" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="AForge.Controls">
-      <Version>2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="AForge.Video.DirectShow">
-      <Version>2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="AudioSwitcher.AudioApi.CoreAudio">
-      <Version>3.0.3</Version>
-    </PackageReference>
     <PackageReference Include="EMGU.CV">
       <Version>4.9.0.5494</Version>
     </PackageReference>
@@ -31,6 +19,5 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
 </Project>
