Implement disconnect Validate options Fix drive sensors

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -6,9 +6,22 @@
         }
     },
     "Win2Mqtt": {
-        "Broker": {},
+        "Broker": {
+            "Server": "192.168.1.4",
+            "Port": 1883,
+            "Username": "",
+            "Password":  ""
+        },
         "MqttTopic": "win2mqtt",
         "TimerInterval": 2,
-        "EnableNotifications": false
+        "EnableNotifications": false,
+        "Sensors": {
+            "CpuSensor": true,
+            "FreeMemorySensor": true,
+            "IsComputerUsed": true,
+            "BatterySensor": false,
+            "DiskSensor": true,
+            "NetworkSensor": true
+        }
     }
 }
