--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -10,9 +10,9 @@
             "Server": "192.168.1.4",
             "Port": 1883,
             "Username": "",
-            "Password":  ""
+            "Password": ""
         },
-        "MqttTopic": "win2mqtt/lechuck",
+        "MqttTopic": "lechuck",
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
@@ -21,6 +21,40 @@
             "IsComputerUsed": true,
             "DiskSensor": true,
             "NetworkSensor": true
+        },
+        "Listeners": {
+            "Monitor": {
+                "Topic": "monitor/set",
+                "Enabled": true
+            },
+            "Shutdown": {
+                "Topic": "shutdown",
+                "Enabled": true
+            },
+            "Reboot": {
+                "Topic": "reboot",
+                "Enabled": true
+            },
+            "Suspend": {
+                "Topic": "suspend",
+                "Enabled": true
+            },
+            "Hibernate": {
+                "Topic": "hibernate",
+                "Enabled": true
+            },
+            "SendMessage": {
+                "Topic": "sendmessage",
+                "Enabled": true
+            },
+            "ProcessRunning": {
+                "Topic": "process/running",
+                "Enabled": true
+            },
+            "Exec": {
+                "Topic": "exec",
+                "Enabled": true
+            }
         }
     }
 }
