--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -5,14 +5,14 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "Win2Mqtt": {
+    "Win2MQTT": {
         "Broker": {
             "Server": "192.168.1.4",
             "Port": 1883,
             "Username": "",
             "Password": ""
         },
-        "MqttTopic": "lechuck",
+        "MqttTopic": "test",
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
@@ -23,8 +23,16 @@
             "NetworkSensor": true
         },
         "Listeners": {
-            "Monitor": {
-                "Topic": "monitor/set",
+            "SendMessage": {
+                "Topic": "sendmessage",
+                "Enabled": true
+            },
+            "Exec": {
+                "Topic": "exec",
+                "Enabled": true
+            },
+            "ProcessRunning": {
+                "Topic": "process/running",
                 "Enabled": true
             },
             "Shutdown": {
@@ -41,18 +49,6 @@
             },
             "Hibernate": {
                 "Topic": "hibernate",
-                "Enabled": true
-            },
-            "SendMessage": {
-                "Topic": "sendmessage",
-                "Enabled": true
-            },
-            "ProcessRunning": {
-                "Topic": "process/running",
-                "Enabled": true
-            },
-            "Exec": {
-                "Topic": "exec",
                 "Enabled": true
             }
         }
