--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -12,7 +12,7 @@
             "Username": "",
             "Password": ""
         },
-        "MqttTopic": "test",
+        "MqttTopic": "lechuck",
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
