Publish Discovery messages for Home Assistant

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -16,6 +16,7 @@
             "Password": ""
         },
         "MqttTopic": "lechuck",
+        "MqttTopicQoS": 1,
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
