--- a/src/Win2Mqtt.Service/appsettings.Development.json
+++ b/src/Win2Mqtt.Service/appsettings.Development.json
@@ -2,6 +2,12 @@
     "Serilog": {
         "MinimumLevel": {
             "Default": "Debug"
-        }
+        },
+        "WriteTo": [
+            {
+                "Name": "Seq",
+                "Args": { "serverUrl": "http://localhost:5341" }
+            }
+        ]
     }
 }
