Rename Win2Mqtt.Common folder

--- a/src/Win2Mqtt.Infra/Win2Mqtt.System.Metrics.csproj
+++ b/src/Win2Mqtt.Infra/Win2Mqtt.System.Metrics.csproj
@@ -7,13 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Win10MqttLibrary\Win2Mqtt.Common.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
         <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
     </ItemGroup>
     
 </Project>
