--- a/src/Win2Mqtt.Broker.Mqtt2Net/Win2Mqtt.Broker.MQTTNet.csproj
+++ b/src/Win2Mqtt.Broker.Mqtt2Net/Win2Mqtt.Broker.MQTTNet.csproj
@@ -13,6 +13,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Win10MqttLibrary\Win2Mqtt.Common.csproj" />
+      <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
     </ItemGroup>
 </Project>
