--- a/src/Win2Mqtt.HomeAssistant/Win2Mqtt.HomeAssistant.csproj
+++ b/src/Win2Mqtt.HomeAssistant/Win2Mqtt.HomeAssistant.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Win10MqttLibrary\Win2Mqtt.Common.csproj" />
+        <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
     </ItemGroup>
 
 </Project>
