--- a/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
+++ b/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
@@ -3,6 +3,6 @@
         <TargetFramework>net8.0</TargetFramework>
         <OutputType>Library</OutputType>
         <LanguageVersion>latest</LanguageVersion>
+        <RootNamespace>Win2Mqtt</RootNamespace>
     </PropertyGroup>
-
 </Project>
