--- a/src/Win2Mqtt.System.Actions/Win2Mqtt.SystemActions.Windows.csproj
+++ b/src/Win2Mqtt.System.Actions/Win2Mqtt.SystemActions.Windows.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
