Separate sensors and messages

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -20,11 +20,12 @@
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
+            "TimeSensor": true,
             "CpuSensor": true,
-            "FreeMemorySensor": true,
-            "IsComputerUsed": true,
             "DiskSensor": true,
-            "NetworkSensor": true
+            "MemorySensor": true,
+            "NetworkSensor": true,
+            "ComputerInUseSensor": true
         },
         "Listeners": {
             "SendMessage": {
