--- a/src/Win2Mqtt.Infra/Win2Mqtt.SystemMetrics.Windows.csproj
+++ b/src/Win2Mqtt.Infra/Win2Mqtt.SystemMetrics.Windows.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+        <PackageReference Include="Scrutor" Version="6.0.1" />
         <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.1" />
     </ItemGroup>
 
