--- a/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
+++ b/src/Win2Mqtt.Service/Win2Mqtt.Service.csproj
@@ -28,7 +28,7 @@
         <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
         <ProjectReference Include="..\Win2Mqtt.Broker.Mqtt2Net\Win2Mqtt.Broker.MQTTNet.csproj" />
         <ProjectReference Include="..\Win2Mqtt.HomeAssistant\Win2Mqtt.HomeAssistant.csproj" />
-        <ProjectReference Include="..\Win2Mqtt.Infra\Win2Mqtt.SystemMetrics.Windows.csproj" />
-        <ProjectReference Include="..\Win2Mqtt.System.Actions\Win2Mqtt.SystemActions.Windows.csproj" />
+        <ProjectReference Include="..\Win2Mqtt.SystemMetrics.Windows\Win2Mqtt.SystemMetrics.Windows.csproj" />
+        <ProjectReference Include="..\Win2Mqtt.SystemActions.Windows\Win2Mqtt.SystemActions.Windows.csproj" />
     </ItemGroup>
 </Project>
