--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -28,16 +28,8 @@
             "ComputerInUseSensor": true
         },
         "Listeners": {
-            "SendMessage": {
-                "Topic": "sendmessage",
-                "Enabled": true
-            },
-            "Exec": {
-                "Topic": "exec",
-                "Enabled": true
-            },
-            "ProcessRunning": {
-                "Topic": "process/running",
+            "Hibernate": {
+                "Topic": "hibernate",
                 "Enabled": true
             },
             "Shutdown": {
@@ -52,10 +44,21 @@
                 "Topic": "suspend",
                 "Enabled": true
             },
-            "Hibernate": {
-                "Topic": "hibernate",
+
+            "SendNotification": {
+                "Topic": "sendnotification",
+                "Enabled": true
+            },
+            "StartProcess": {
+                "Topic": "startprocess",
+                "Enabled": true
+            },
+            "GetProcesses": {
+                "Topic": "getprocesses",
                 "Enabled": true
             }
+
+
         }
     }
 }
