Improve options for sensors

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -20,12 +20,30 @@
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
-            "TimeSensor": true,
-            "CpuSensor": true,
-            "DiskSensor": true,
-            "MemorySensor": true,
-            "NetworkSensor": true,
-            "ComputerInUseSensor": true
+            "TimestampSensor": {
+                "enabled": true,
+                "topic": "timestamp"
+            },
+            "CpuProcessorTimeSensor": {
+                "enabled": true,
+                "topic": "cpuprocessortime"
+            },
+            "DriveSensor": {
+                "enabled": true,
+                "topic": "drive"
+            },
+            "FreeMemorySensor": {
+                "enabled": true,
+                "topic": "freememory"
+            },
+            "NetworkAvailabilitySensor": {
+                "enabled": true,
+                "topic": "networkavailability"
+            },
+            "ComputerInUseSensor": {
+                "enabled": false,
+                "topic": "computerinuse"
+            }
         },
         "Listeners": {
             "Hibernate": {
