--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -28,10 +28,6 @@
                 "enabled": true,
                 "topic": "cpuprocessortime"
             },
-            "DriveSensor": {
-                "enabled": true,
-                "topic": "drive"
-            },
             "FreeMemorySensor": {
                 "enabled": true,
                 "topic": "freememory"
@@ -43,6 +39,26 @@
             "ComputerInUseSensor": {
                 "enabled": false,
                 "topic": "computerinuse"
+            }
+        },
+        "MultiSensors": {
+            "DriveMultiSensor": {
+                "enabled": true,
+                "topic": "drive",
+                "Sensors": {
+                    "DriveFreeSizeSensor": {
+                        "enabled": true,
+                        "topic": "sizefree"
+                    },
+                    "DrivePercentFreeSizeSensor": {
+                        "enabled": true,
+                        "topic": "percentfree"
+                    },
+                    "DriveTotalSizeSensor": {
+                        "enabled": true,
+                        "topic": "sizetotal"
+                    }
+                }
             }
         },
         "Listeners": {
