--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -15,28 +15,55 @@
             "Username": "",
             "Password": ""
         },
-        "MqttTopic": "lechuck",
+        "MachineIdentifier": "lechuck",
         "MqttTopicQoS": 1,
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
-            "CpuSensor": true,
-            "FreeMemorySensor": true,
-            "IsComputerUsed": true,
-            "DiskSensor": true,
-            "NetworkSensor": true
+            "TimestampSensor": {
+                "enabled": true,
+                "topic": "timestamp"
+            },
+            "CpuProcessorTimeSensor": {
+                "enabled": true,
+                "topic": "cpuprocessortime"
+            },
+            "FreeMemorySensor": {
+                "enabled": true,
+                "topic": "freememory"
+            },
+            "NetworkAvailabilitySensor": {
+                "enabled": true,
+                "topic": "networkavailability"
+            },
+            "ComputerInUseSensor": {
+                "enabled": false,
+                "topic": "computerinuse"
+            }
+        },
+        "MultiSensors": {
+            "DriveMultiSensor": {
+                "enabled": true,
+                "topic": "drive",
+                "Sensors": {
+                    "DriveFreeSizeSensor": {
+                        "enabled": true,
+                        "topic": "sizefree"
+                    },
+                    "DrivePercentFreeSizeSensor": {
+                        "enabled": true,
+                        "topic": "percentfree"
+                    },
+                    "DriveTotalSizeSensor": {
+                        "enabled": true,
+                        "topic": "sizetotal"
+                    }
+                }
+            }
         },
         "Listeners": {
-            "SendMessage": {
-                "Topic": "sendmessage",
-                "Enabled": true
-            },
-            "Exec": {
-                "Topic": "exec",
-                "Enabled": true
-            },
-            "ProcessRunning": {
-                "Topic": "process/running",
+            "Hibernate": {
+                "Topic": "hibernate",
                 "Enabled": true
             },
             "Shutdown": {
@@ -51,10 +78,21 @@
                 "Topic": "suspend",
                 "Enabled": true
             },
-            "Hibernate": {
-                "Topic": "hibernate",
+
+            "SendNotification": {
+                "Topic": "sendnotification",
+                "Enabled": true
+            },
+            "StartProcess": {
+                "Topic": "startprocess",
+                "Enabled": true
+            },
+            "GetProcesses": {
+                "Topic": "getprocesses",
                 "Enabled": true
             }
+
+
         }
     }
 }
