Add metadata in each sensor

--- a/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
+++ b/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
@@ -4,5 +4,6 @@
         <OutputType>Library</OutputType>
         <LanguageVersion>latest</LanguageVersion>
         <RootNamespace>Win2Mqtt</RootNamespace>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 </Project>
