All compliant with HA

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -20,41 +20,41 @@
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
-            "TimestampSensor": {
+            "Timestamp": {
                 "enabled": true,
                 "topic": "timestamp"
             },
-            "CpuProcessorTimeSensor": {
+            "CpuProcessorTime": {
                 "enabled": true,
                 "topic": "cpuprocessortime"
             },
-            "FreeMemorySensor": {
+            "FreeMemory": {
                 "enabled": true,
                 "topic": "freememory"
             },
-            "NetworkAvailabilitySensor": {
+            "NetworkAvailability": {
                 "enabled": true,
                 "topic": "networkavailability"
             },
-            "ComputerInUseSensor": {
+            "ComputerInUse": {
                 "enabled": false,
                 "topic": "computerinuse"
             }
         },
         "MultiSensors": {
-            "DriveMultiSensor": {
+            "Drives": {
                 "enabled": true,
                 "topic": "drive",
                 "Sensors": {
-                    "DriveFreeSizeSensor": {
+                    "DriveFreeSize": {
                         "enabled": true,
                         "topic": "sizefree"
                     },
-                    "DrivePercentFreeSizeSensor": {
+                    "DrivePercentFreeSize": {
                         "enabled": true,
                         "topic": "percentfree"
                     },
-                    "DriveTotalSizeSensor": {
+                    "DriveTotalSize": {
                         "enabled": true,
                         "topic": "sizetotal"
                     }
