Remove topic from sensor options

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -21,42 +21,33 @@
         "EnableNotifications": false,
         "Sensors": {
             "Timestamp": {
-                "enabled": true,
-                "topic": "timestamp"
+                "enabled": true
             },
             "CpuProcessorTime": {
-                "enabled": true,
-                "topic": "cpuprocessortime"
+                "enabled": true
             },
             "FreeMemory": {
-                "enabled": true,
-                "topic": "freememory"
+                "enabled": true
             },
             "NetworkAvailability": {
-                "enabled": true,
-                "topic": "networkavailability"
+                "enabled": true
             },
             "ComputerInUse": {
-                "enabled": false,
-                "topic": "computerinuse"
+                "enabled": false
             }
         },
         "MultiSensors": {
             "Drives": {
                 "enabled": true,
-                "topic": "drive",
                 "Sensors": {
                     "DriveFreeSize": {
-                        "enabled": true,
-                        "topic": "sizefree"
+                        "enabled": true
                     },
                     "DrivePercentFreeSize": {
-                        "enabled": true,
-                        "topic": "percentfree"
+                        "enabled": true
                     },
                     "DriveTotalSize": {
-                        "enabled": true,
-                        "topic": "sizetotal"
+                        "enabled": true
                     }
                 }
             }
