Feature/typed sensor system (#3)
* Typed sensors

* GetEnabledSensors according to Options

* Add metadata in each sensor

* All compliant with HA

* SubscribeAsync

* Remove topic from sensor options

---------

Co-authored-by: Fernando Arias <fernando.arias@sembo.se>

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -20,43 +20,34 @@
         "TimerInterval": 5,
         "EnableNotifications": false,
         "Sensors": {
-            "TimestampSensor": {
-                "enabled": true,
-                "topic": "timestamp"
+            "Timestamp": {
+                "enabled": true
             },
-            "CpuProcessorTimeSensor": {
-                "enabled": true,
-                "topic": "cpuprocessortime"
+            "CpuProcessorTime": {
+                "enabled": true
             },
-            "FreeMemorySensor": {
-                "enabled": true,
-                "topic": "freememory"
+            "FreeMemory": {
+                "enabled": true
             },
-            "NetworkAvailabilitySensor": {
-                "enabled": true,
-                "topic": "networkavailability"
+            "NetworkAvailability": {
+                "enabled": true
             },
-            "ComputerInUseSensor": {
-                "enabled": false,
-                "topic": "computerinuse"
+            "ComputerInUse": {
+                "enabled": false
             }
         },
         "MultiSensors": {
-            "DriveMultiSensor": {
+            "Drives": {
                 "enabled": true,
-                "topic": "drive",
                 "Sensors": {
-                    "DriveFreeSizeSensor": {
-                        "enabled": true,
-                        "topic": "sizefree"
+                    "DriveFreeSize": {
+                        "enabled": true
                     },
-                    "DrivePercentFreeSizeSensor": {
-                        "enabled": true,
-                        "topic": "percentfree"
+                    "DrivePercentFreeSize": {
+                        "enabled": true
                     },
-                    "DriveTotalSizeSensor": {
-                        "enabled": true,
-                        "topic": "sizetotal"
+                    "DriveTotalSize": {
+                        "enabled": true
                     }
                 }
             }
