Unify sensors topics

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -15,7 +15,7 @@
             "Username": "",
             "Password": ""
         },
-        "MachineIdentifier": "lechuck",
+        "DeviceIdentifier": "DESKTOP-GONT7DL",
         "MqttTopicQoS": 1,
         "TimerInterval": 5,
         "EnableNotifications": false,
