Implement listeners in a better modular way

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -10,10 +10,10 @@
     },
     "Win2MQTT": {
         "Broker": {
-            "Server": "192.168.1.4",
+            "Server": "homeassistant.local",
             "Port": 1883,
-            "Username": "",
-            "Password": ""
+            "Username": "win2mqtt",
+            "Password": "win2mqtt"
         },
         "DeviceIdentifier": "DESKTOP-GONT7DL",
         "MqttTopicQoS": 1,
@@ -69,7 +69,6 @@
                 "Topic": "suspend",
                 "Enabled": true
             },
-
             "SendNotification": {
                 "Topic": "sendnotification",
                 "Enabled": true
@@ -82,8 +81,6 @@
                 "Topic": "getprocesses",
                 "Enabled": true
             }
-
-
         }
     }
 }
