Feature/simplify ha topics (#5)
* Rename Constants.ServiceBaseTopic into Constants.Win2MqttTopic

* Unify sensors topics

* X

* Get rid of SensorValue

* Improve connection resiliency

* Unify ha classes

* Implement listeners in a better modular way

* Update documentation

---------

Co-authored-by: Fernando Arias <fernando.arias@sembo.se>

--- a/src/Win2Mqtt.Service/appsettings.json
+++ b/src/Win2Mqtt.Service/appsettings.json
@@ -10,12 +10,12 @@
     },
     "Win2MQTT": {
         "Broker": {
-            "Server": "192.168.1.4",
+            "Server": "homeassistant.local",
             "Port": 1883,
-            "Username": "",
-            "Password": ""
+            "Username": "win2mqtt",
+            "Password": "win2mqtt"
         },
-        "MachineIdentifier": "lechuck",
+        "DeviceIdentifier": "DESKTOP-GONT7DL",
         "MqttTopicQoS": 1,
         "TimerInterval": 5,
         "EnableNotifications": false,
@@ -69,7 +69,6 @@
                 "Topic": "suspend",
                 "Enabled": true
             },
-
             "SendNotification": {
                 "Topic": "sendnotification",
                 "Enabled": true
@@ -82,8 +81,6 @@
                 "Topic": "getprocesses",
                 "Enabled": true
             }
-
-
         }
     }
 }
