Feature/implement pending actions (#9)
* Implement Reboot, Suspend, Shutdown

* Implement StartProcess

* Add pending Sensors

* Add Win2Mqtt.SystemActions project

* Registrations missing

* Move windows sensors to windows-specific project

* Update dotnet.yml

Update pipeline to new app name and folder

---------

Co-authored-by: Fernando Arias <fernando.arias@sembo.se>

--- a/src/Win2Mqtt/appsettings.json
+++ b/src/Win2Mqtt/appsettings.json
@@ -53,34 +53,42 @@
       }
     },
     "Listeners": {
-      "Hibernate": {
-        "Topic": "hibernate",
-        "Enabled": true
-      },
-      "Shutdown": {
-        "Topic": "shutdown",
-        "Enabled": true
-      },
-      "Reboot": {
-        "Topic": "reboot",
-        "Enabled": true
-      },
-      "Suspend": {
-        "Topic": "suspend",
-        "Enabled": true
-      },
-      "SendNotification": {
-        "Topic": "sendnotification",
-        "Enabled": true
-      },
-      "StartProcess": {
-        "Topic": "startprocess",
-        "Enabled": true
-      },
-      "GetProcesses": {
-        "Topic": "getprocesses",
-        "Enabled": true
-      }
+        "Hibernate": {
+            "Topic": "hibernate",
+            "Enabled": true
+        },
+        "Reboot": {
+            "Topic": "reboot",
+            "Enabled": true
+        },
+        "Shutdown": {
+            "Topic": "shutdown",
+            "Enabled": true
+        },
+        "Suspend": {
+            "Topic": "suspend",
+            "Enabled": true
+        },
+        "SendNotification": {
+            "Topic": "sendnotification",
+            "Enabled": true
+        },
+        "StartProcess": {
+            "Topic": "startprocess",
+            "Enabled": true
+        },
+        "KillProcess": {
+            "Topic": "killprocess",
+            "Enabled": true
+        },
+        "GetProcesses": {
+            "Topic": "getprocesses",
+            "Enabled": true
+        },
+        "GetProcess": {
+            "Topic": "getprocess",
+            "Enabled": true
+        }
     }
   }
 }
